fix 1 deprec warn; add testReplaceInAllLines; ...
comment out BufferPrimsStringBuffer as its replace(5 args) isn't implemented.